Implement BGE CTM Canary 7